#To compile faster: cmake .. -DUSE_SSE4_INSTRUCTIONS=ON 

cmake_minimum_required(VERSION 2.8)
project( FoodFest )
set(CMAKE_CXX_FLAGS "-O3")
add_subdirectory(./build/dlib/dlib-19.6 dlib_build)
find_package( OpenCV REQUIRED )
#find_package(dlib REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS})
#include_directories(${DLIB_INCLUDE_DIRECTORY}) 
add_executable( project project.cpp food.h food.cpp)
add_executable( project2 project2.cpp food.h food.cpp)
target_link_libraries(project2 dlib::dlib)
target_link_libraries(project dlib::dlib)
target_link_libraries( project2 ${OpenCV_LIBS} )
target_link_libraries( project ${OpenCV_LIBS} )
